# beatrooter

./: LICENSE  README.md  admin.html  index.html  requirements.txt  robots.txt  team.html  vercel.json
BeatBox/: README.md
BeatRoot_V0.1.0/: README.md  config.example.yaml  config.yaml  pyproject.toml
BeatRoot_V0.1.0/beatroot/: __init__.py  __main__.py  logging_utils.py
BeatRoot_V0.1.0/beatroot.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
BeatRoot_V0.1.0/beatroot/agent/: __init__.py  loop.py  models.py  planner.py  prompting.py
BeatRoot_V0.1.0/beatroot/cli/: __init__.py  console.py  main.py
BeatRoot_V0.1.0/beatroot/config/: __init__.py  loader.py  models.py
BeatRoot_V0.1.0/beatroot/core/: __init__.py  agent.py  backend.py  controller.py  session.py
BeatRoot_V0.1.0/beatroot/interface/: __init__.py  main.py
BeatRoot_V0.1.0/beatroot/llm/: __init__.py  base.py  claude.py  factory.py  openai_compatible.py
BeatRoot_V0.1.0/beatroot/memory/: __init__.py  session.py
BeatRoot_V0.1.0/beatroot/parser/: __init__.py  nmap.py  web_enum.py
BeatRoot_V0.1.0/beatroot/prompts/: __init__.py  pentesting.py
BeatRoot_V0.1.0/beatroot/scenario/: __init__.py  context.py
BeatRoot_V0.1.0/beatroot/tools/: __init__.py  base.py  command.py  ffuf.py  gobuster.py  nmap.py  registry.py
BeatRooter/: main.py
Crescimento da Nábia/: Readme.md
Crescimento_da_Nabia/: Readme.md
assets/: count_stars.pxo
beatrooter-site/: index.html  package.json
docs/: arquitetura-modular.md  beatnote-plan.md
public/: admin.json
toolInstallerScripts/: toolInstaller.py  (+1 more)
(+201 files in other folders)
