[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "beatroot"
version = "0.1.0"
description = "Local-first AI-assisted security assessment copilot"
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["requests>=2.31.0"]

[project.scripts]
beatroot = "beatroot.interface.main:main"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
include = ["beatroot*"]
